css/style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
body {
  font-size: 20px;
  font-family: "Nunito", sans-serif;
  overflow-x: hidden;
}
:root {
  --purple: rgb(56, 27, 73);
  --purple-light: #4f2666;
  --blueStronger: #0b53be;
  --regular-gray: #555;
  --light-gray: rgb(156, 156, 156);
  --black: #202429;
}
.col,
.col-12,
.container,
.container-fluid,
.row {
  margin: 0;
  padding: 0;
  --bs-gutter-x: 0;
}
main {
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  align-items: center;
}

/* NAV */
#nav {
  display: flex;
  z-index: 10;
  background-color: var(--black);
  min-width: 100vw;
  max-width: 100vw;
  min-height: 10vh;
  max-height: 10vh;
  position: fixed;
}
.menu-icon {
  color: white;
  font-size: 38px;
  padding: 0;
}
#nav > .container {
  display: flex;
  align-items: center;
  margin: 0 auto;
}
#nav .container-fluid {
  display: flex;
  justify-content: space-between;
}
.navbar-brand {
  font-weight: bold;
  font-family: "Spline Sans", sans-serif;
  font-size: 26px;
  color: white;
  margin: 0;
}
.nav-item {
  width: 140px;
  font-weight: bold;
  display: flex;
  justify-content: center;
}
.nav-link,
.navbar-brand:visited,
.nav-link:visited {
  padding: 0;
  color: white;
}
#navbarNav {
  display: flex;
}
#navbarNav .nav-item:last-child {
  justify-content: flex-end;
}

/* INICIO */
#inicio {
  min-width: 100%;
  max-width: 100%;
  margin-bottom: 20vh;
}
#inicio > .container:first-child {
  min-width: 100%;
  min-height: 90vh;
  display: flex;
  align-items: center;
  margin-top: 10vh;
}
.landing-img {
  max-width: 75%;
}

/* BUTTONS STYLES */
.btn-container {
  display: flex;
  flex-direction: row;
  min-width: 100%;
}
.btn-style > ion-icon {
  padding-left: 10px;
  font-size: 24px;
  color: white;
}
.btn-style {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  background-color: var(--purple-light);
  width: 200px;
  height: 50px;
  border: none;
  border-radius: 4px;
}
.btn-style a,
.btn-style span {
  display: flex;
  align-items: center;
  text-decoration: none;
  color: white;
  font-size: 20px;
}
.btn-dark {
  margin-left: 10px;
  background-color: var(--black);
}

/* TEXT FORMAT  */
a {
  text-decoration: none;
  display: flex;
}
p {
  text-align: justify;
  font-size: 1.4rem;
  padding-bottom: 10px;
}
h2 {
  padding-bottom: 20px;
}
h4 {
  font-size: 24px;
  color: #555;
}
.display-4{
  text-transform: uppercase;
}

/* ABOUT SECTION*/
#sobre {
  min-width: 100vw;
  min-height: 90vh;
  max-height: 90vh;
  margin-bottom: 15vh;
}
#sobre button span,
#inicio button span {
  padding-right: 15px;
}
.badge{
  background-color: var(--purple-light);
  padding: 8px;
  margin-bottom: 10px;
}

/* HABILIDADES */
#habilidades {
  display: flex;
  justify-content: center;
  margin: 0 auto;
}
.accordion-header {
  padding: 0;
}
.accordion-item {
  background-color: var(--black);
}
.accordion-title {
  color: white;
  display: flex;
  align-items: center;
}
.accordion-title p {
  margin: 0;
  margin-left: 10px;
}
#habilidades button i {
  padding-right: 10px;
}
.icon {
  display: flex;
  padding: 20px 0;
  max-width: 50px;
}
#education {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-bottom: 15vh;
  min-width: 100%;
}
.grid p {
  font-size: 18px;
  margin-bottom: 0.2rem;
}
#current-next {
  margin: 0 auto;
  text-align: center;
  min-width: 90%;
  max-width: 90%;
}
#current-next .col-12,
#current-next .col-6 {
  display: flex;
  flex-direction: column;
  align-items: center;
}
.accordion {
  display: flex;
  justify-content: center;
}
.progress {
  min-height: 25px;
  max-height: 25px;
}
.progress:last-child {
  margin-bottom: 20px;
}

/* UTILS */
.mw-100-percent {
  min-width: 100%;
  max-width: 100%;
}
.mw-80vw {
  min-width: 80vw;
  max-width: 80vw;
}
.rounder {
  width: 20px;
  height: 20px;
  background-color: var(--purple-light);
  border-radius: 50%;
  z-index: 20;
}
.line {
  width: 2px;
  background-color: var(--purple);
  opacity: 0.5;
  height: 100%;
  margin-left: -12px;
}
.center {
  display: flex;
  justify-content: center;
  align-items: center;
}
.grid {
  display: grid;
  grid-template-columns: 2fr 2fr 2fr;
  grid-template-rows: minmax(100px, auto);
}
.with-80-percent {
  min-width: 80%;
  max-width: 80%;
}
.text-regular-gray {
  color: var(--regular-gray);
}
.text-light-gray {
  color: var(--light-gray);
}
.text-right {
  text-align: right;
}
.text-left{
  text-align:left;
}
.fade {
  transform: translateY(150px);
  opacity: 0;
  transition: all 2s ease;
}
.fade.active {
  transform: translateY(0);
  opacity: 1;
}

/* SOCIAL */
#social {
  min-height: 10vh;
  max-height: 10vh;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: flex-end;
  margin: 0 auto;
  padding: 0;
}
#social > a {
  display: flex;
  color: white;
  font-size: 35px;
  padding: 0 10px;
}
#social > i:hover {
  cursor: pointer;
  color: var(--blueStrong-color);
}

/* PROYECTOS CONTAINER */
.proyectos-container {
  display: grid;
  margin: 0 auto;
  border: 1px solid grey;

}
.thumbnail {
  min-width: 100%;
  max-width: 100%;
  cursor: pointer;
}
.thumbnail:hover {
  box-shadow: 1px 1px 25px #202429;
  transition: all 500ms ease;
}

/* TOP DOWN BUTTON */
#topBotButton {
  position: fixed;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  right: 0;
  bottom: 10vh;
  padding: 10px;
  border: none;
}
#topBotButton ion-icon {
  font-size: 48px;
  padding: 10px;
  color: var(--purple);
}
#topBotButton ion-icon:hover {
  border-radius: 50%;
  background-color: var(--purple-light);
  color: white;
}

/* FOOTER */
#footer {
  min-width: 100vw;
  max-width: 100vw;
  min-height: 10vh;
  max-height: 10vh;
  background-color: var(--black);
  margin-top: 10vh;
  z-index: 10;
}
#social {
  color: white;
}
#social ion-icon {
  font-size: 32px;
  padding: 5px;
}
#footer a:last-child,
#footer ion-icon:last-child {
  padding: 0;
}

/* MEDIA QUERYS */
@media (max-width:375px){
  #inicio{
    margin-bottom: 25vh;
  }
}
@media (max-width:424px){
  .grid p{
    font-size: .7rem;
  }
  .grid .container:nth-child(1),
  .grid .container:nth-child(7){
    width: 90%;
  }
}

@media (max-width: 425px) {
  .nav-link{
    font-size: 0.8rem;
  }
  .nav-item:nth-child(2),
  .nav-item:nth-child(3)
  {
    padding-right: 20px;
  }
  #navbarNav .nav-item:last-child {
    justify-content: center;
  }
  i {
    font-size: 1.4rem;
  }
  P{
    font-size: 1rem;
  }
  .navbar-nav {
    flex-direction: row;
    background-color: var(--purple-light);
    padding: 5px;
  }
  .navbar-brand {
    display: flex;
    align-items: center;
    font-size: 20px;
  }
  .btn-dark {
    margin: 10px 10px 0 0;
  }
  .accordion-item {
    min-width: 100%;
    max-width: 100%;
  }
  .icon {
    max-width: 40px;
  }
  #sobre{
    margin-bottom: 40vh;
  }
  #education p {
    font-size: 0.7rem ;
  }
  .grid {
    grid-template-columns: 2fr 1fr 2.2fr;
    min-width: 80vw;
  }
  #topBotButton ion-icon {
    font-size: 24px;
    padding: 0;
  }
}
@media (max-width: 576px) {
  #navbarNav {
    position: absolute;
    min-width: 100%;
    max-width: 100%;
    top: 10vh;
    right: 5vh;
    left: 0;
  }
  .navbar-nav {
    min-width: 100%;
    max-width: 100%;
    margin: 0 auto;
  }
  .landing-img {
    display: none;
  }
  .btn-container {
    flex-direction: column;
  }
  .btn-dark {
    margin: 10px 10px 0 0;
  }
  .accordion-title p {
    padding: 0;
  }
}

@media (min-width: 577px) and (max-width: 768px) {
  #navbarNav {
    position: absolute;
    top: 10vh;
    left: 0;
  }
  .navbar-nav {
    width: 100vw;
    flex-direction: row;
    background-color: var(--purple-light);
    justify-content: space-around;
    padding: 10px 0;
  }
  #navbarNav .nav-item:last-child {
    justify-content: flex-start;
  }
  .nav-item {
    justify-content: space-around;
  }
  .nav-link{
    font-size: 1rem;
  }
  .landing-img {
    display: none;
  }
  p{
    font-size: 1.1rem;
  }
  .btn-container {
    flex-direction: row;
  }
  .accordion-title p {
    padding: 0;
  }
  .grid p{
    font-size: 1rem;
  }
}

@media (min-width: 769px) and (max-width: 992px) {
  .navbar-nav {
    min-width: 100vw;
    max-width: 100vw;
    flex-direction: row;
    background-color: var(--black);
  }
  .landing-img {
    min-width: 100%;
  }
  .btn-dark {
    margin: 10px 10 0 0;
  }
}

@media (min-width: 1024px) and (max-width:1919px){
  .grid{
    width: 90%;
  }
  p{
    font-size: 1.1rem;
  }
  #current-next .container{
    min-width: 100%;
  }
  .landing-img{
    max-width: 60%;
  }
}

@media(min-width:1920px){
  p{
    font-size: 1.6rem;
  }
}

